# ai-interviewer-langgraph

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: context-engineering.md  harness.md  multi-agent-coordination.md
scripts/: generate_ts_types.py
specs/: p1-product-specs.md  p2-plan-specs.md  p3-task-specs.md
src/: config.py  main.py  state.py
src/agents/: evaluator.py  planner.py  questioner.py  supervisor.py
src/api/: main.py  routes.py  sessions.py  sse.py
src/graph/: builder.py  governance.py  router.py
src/tools/: evaluation.py  resume_parser.py
src/utils/: logging.py  pii.py  prompts.py
tests/: conftest.py
tests/fixtures/: sample_state.json
tests/integration/: test_api.py  test_graph_flow.py  test_tools.py
tests/unit/: test_config.py  test_evaluation_tool.py  test_evaluator.py  test_governance.py  test_logging.py  test_pii.py  test_planner.py  test_prompts.py  test_questioner.py  test_report.py  test_resume_parser.py  test_router.py  test_state.py  test_supervisor.py
web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/components/: ToastContainer.tsx
web/src/pages/: Arbitration.tsx  Interview.tsx  InterviewerReview.tsx  Report.tsx  Setup.tsx
web/src/services/: api.ts  sse.ts
web/src/stores/: interviewStore.ts  (+1 more)
web/tests-e2e/: e2e-escalate.spec.ts  e2e-interviewer-review.spec.ts  e2e-normal.spec.ts
(+1 files in other folders)
