[project]
name = "ai-interviewer-langgraph"
version = "0.1.0"
description = "AI 智能面试官自治系统 - 基于 LangGraph 的多 Agent 状态机"
requires-python = ">=3.11,<3.14"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"
